--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,7 +3,7 @@
   <%= link_to 'Edit', edit_blog_path(@blog)  if logged_in?(:site_admin) %>
   <%= link_to 'Back', blogs_path %>
   <hr>
-  <p><%= @blog.body %></p>
+  <p><%= markdown @blog.body %></p>
   <%= render 'comments/comment_form' %>
   <div id="comments" data-blog-id="<%= @blog.id %>">
     <%= render @blog.comments%>
