--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,8 +1,14 @@
-<div class="blog-masthead">
+<nav class="navbar navbar-toogleable-md navbar-dark bg-dark fixed-top">
+  <%= link_to "RubyX Blog", blogs_path, class: 'navbar-brand' %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
   <div class="container">
-    <nav class="nav blog-nav">
-      <%= nav_helper 'nav-link', 'span' %>
-      <%= login_helper 'nav-link' %>
-    </nav>
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+     <ul class="navbar-nav mr-auto">
+       <%= nav_helper 'nav-link', 'span' %>
+   <%= login_helper 'nav-link' %>
+     </ul>
+ </div>
   </div>
-</div>
+</nav>
