--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,7 +5,25 @@
     <div class="row">
       <div class="col-md-4">
         <%= image_tag "Enzo_Clavelloux.jpg", width: 300, alt: "Image de profil", class: "profile-img" %>
+
+        <div class="skills">
+          <% @skills.each do |skill| %>
+            <div class="skill">
+              <h4><%= skill.title %></h4>
+              <div class="progress">
+                <div
+                class="progress-bar progress-bar-striped bg-warning"
+                role="progressbar"
+                aria-valuenow="<%= skill.percent_use %>"
+                area-valuemax="100"
+                style="width: <%= skill.percent_use %>%"
+                ></div>
+              </div>
+            </div>
+          <% end %>
+        </div>
       </div>
+
       <div class="col-md-8">
         <p>Je m'appelle Enzo Clavelloux et je suis auto-entrepreneur et patron (de faite) de RubyX développement.
           Après une formation de développeur logiciel au sein de l'école Simplon.co et travailler dans plusieurs entreprises dans des secteures différents (e-commerce, application de géolocalisation et jeux vidéo) j'ai décider de me monter
