--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,22 +1,22 @@
 <div class="app-card-container">
   <div class="card">
     <h1>A propos</h1>
-    <br/>
+
+    <hr>
+
     <div class="row">
       <div class="col-md-4">
-        <%= image_tag "Enzo_Clavelloux.jpg", width: 300, alt: "Image de profil", class: "profile-img" %>
-
         <div class="skills">
           <% @skills.each do |skill| %>
             <div class="skill">
               <h4><%= skill.title %></h4>
               <div class="progress">
                 <div
-                class="progress-bar progress-bar-striped bg-warning"
-                role="progressbar"
-                aria-valuenow="<%= skill.percent_use %>"
-                area-valuemax="100"
-                style="width: <%= skill.percent_use %>%"
+                  class="progress-bar progress-bar-striped bg-warning"
+                  role="progressbar"
+                  aria-valuenow="<%= skill.percent_use %>"
+                  aria-valuemax="100"
+                  style="width: <%= skill.percent_use %>%"
                 ></div>
               </div>
             </div>
@@ -25,71 +25,71 @@
       </div>
 
       <div class="col-md-8">
-        <p>Je m'appelle Enzo Clavelloux et je suis auto-entrepreneur et patron (de faite) de RubyX développement.
-          Après une formation de développeur logiciel au sein de l'école Simplon.co et travailler dans plusieurs entreprises dans des secteures différents (e-commerce, application de géolocalisation et jeux vidéo) j'ai décider de me monter
-          en freelance.</p>
-          <p>La question est pourquoi choisir cette entreprise plutôt qu'une autre ? Et bien pour plusieurs raison.</p>
-          <p>La première raison est le language utilisés, la plupart des sites sont en PHP avec des Framworks tel que Symfony 4/3 ou CodeIgniter ou encore avec des CMS tel que Wordpress. Chez nous on a décidés de mettre en place une solution
-            innovante en utilisant Ruby On Rails un framwork pour le language Ruby qui est extrémement puissant et robuste et qui permet de sortir des 1ere version de sites extrèmement rapidement.
-            La deuxième c'est que vous aurez des comptes-rendus à la fréquence que vous souhaitez afin que les étapes de développement de votre site n'ait aucun secret pour vous</p>
-            <p>Donc si vous etes une entreprise qui cherche à créer un site qu'il soit vitrine ou nécessitant une base de données de manière extrement rapide et avec les clef pour pouvoir l'administrer vous-mêmes n'hésiter plus et contacter nous</p>
+       <p>Je m'appelle Enzo Clavelloux et je le suis le développeur derrière RubyX.
+            Je suis titulaire d'un niveau III en tant que développeur logiciel après une formation à BeWeb qui fait partie de la grande école de développement Simplon.</p>
+            <p>Votre question est pourquoi choisir cette entreprise plutôt qu'une autre ? Et bien pour plusieurs raisons.</p>
+            <p>La première c'est que plutôt que d'utiliser des CMS (Wordpress ou autre) RubyX vous développera un site ou une application sur mesure répondant
+  à vos besoins de plus les langages utilisés seront toujours choisis pour leur efficacité et leur rapidité.</p>
+              <p>Donc si vous êtes une entreprise qui cherche à créer un site qu'il soit vitrine ou nécessitant une base de données de manière extrêmement rapide et avec les clefs pour pouvoir l'administrer vous-mêmes ou une application mobile multi-platforme n'hésiter plus et contactez nous.</p>
 
-            <p>
+
+       <button
+                class="btn btn-primary"
+                type="button"
+                data-toggle="collapse"
+                data-target="#jobHistory"
+                aria-expended="false"
+                aria-controls="jobHistory"
+                >
+                Job History
+              </button>
+
               <button
               class="btn btn-primary"
               type="button"
               data-toggle="collapse"
-              data-target="#jobHistory"
+              data-target="#education"
               aria-expended="false"
-              aria-controls="jobHistory"
+              aria-controls="education"
               >
-              Job History
+              Education
             </button>
+          </p>
 
-            <button
-            class="btn btn-primary"
-            type="button"
-            data-toggle="collapse"
-            data-target="#education"
-            aria-expended="false"
-            aria-controls="education"
-            >
-            Education
-          </button>
-        </p>
+          <p>
+            <div class="collapse" id="jobHistory">
+              <div class="card card-block">
+                Job1
+              </div>
+              <div class="card card-block">
+                Job2
+              </div>
+              <div class="card card-block">
+                Job3
+              </div>
+              <div class="card card-block">
+                Job4
+              </div>
+            </div>
 
-        <p>
-          <div class="collapse" id="jobHistory">
-            <div class="card card-block">
-              Job1
+            <div class="collapse" id="education">
+              <div class="card card-block">
+                Education 1
+              </div>
+              <div class="card card-block">
+                Education 2
+              </div>
+              <div class="card card-block">
+                Education 3
+              </div>
+              <div class="card card-block">
+                Education 4
+              </div>
             </div>
-            <div class="card card-block">
-              Job2
-            </div>
-            <div class="card card-block">
-              Job3
-            </div>
-            <div class="card card-block">
-              Job4
-            </div>
-          </div>
-
-          <div class="collapse" id="education">
-            <div class="card card-block">
-              Education 1
-            </div>
-            <div class="card card-block">
-              Education 2
-            </div>
-            <div class="card card-block">
-              Education 3
-            </div>
-            <div class="card card-block">
-              Education 4
-            </div>
-          </div>
-        </p>
       </div>
     </div>
   </div>
 </div>
+ 
+ 
+ 
