--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,8 +4,8 @@
     <% end %>
 
           <h1 class="cover-heading">Bienvenue</h1>
-          <p class="lead">Notre devise est que le développement d'un dite Internet ou d'une application ne devrais pas avoir de secrets pour le client.
-            En passant par RubyX vous aurez une solution clef en main pour votre site ainsi que des compte-rendus du travail effectuer sur votre projet.</p>
+          <p class="lead">Notre devise est que le développement d'un site Internet ou d'une application ne devrait pas avoir de secrets pour le client.
+          En passant par RubyX vous aurez une solution clef en main pour votre site ainsi que des compte-rendus réguliers du travail effectué sur votre projet.</p>
           <p class="lead">
             <%= link_to "En savoir plus", about_me_path, class: "btn btn-lg btn-secondary" %>
           </p>
