--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="col-sm-3 offset-sm-1 blog-sidebar">
   <div class="sidebar-module sidebar-module-inset">
     <h4>A propos</h4>
-    <p>Ce blog ne contient  <em>pas que</em> des articles sur le monde du développement ou des astuces pour développeurs, celui-ci peut aussi en effet parler de cinéma, Jeux vidéo ou Manga suivant les envies du moment.</p>
+    <p>Ce blog ne contient  <em>pas que</em> des articles sur le monde du développement ou des astuces pour développeurs, celui-ci peut aussi en effet parler de cinéma, Jeux vidéos ou Manga suivant les envies du moment.</p>
   </div>
 
     <%= source_helper("alert alert-info") %>
