--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="card-body">
 
 
-      <h2>Sign up</h2>
+      <h2>Inscription</h2>
 
        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
        <%= devise_error_messages! %>
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-md-6">
             <div class="form-group">
-              <%= f.label :name %><br />
+              <%= f.label :nom %><br />
               <%= f.text_field :name, autofocus: true, autocomplete: "name", class: 'form-control' %>
             </div>
 
@@ -25,7 +25,7 @@
             <div class="form-group">
               <%= f.label :password %>
               <% if @minimum_password_length %>
-              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <em>(<%= @minimum_password_length %> characteres minimum)</em>
               <% end %><br />
               <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
             </div>
