--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -26,6 +26,12 @@
       </div>
     </div>
     <div class="col-md-12">
+        <div class="form-group">
+          <%= f.label :lien %>
+          <%= f.text_field :link, class: 'form-control' %>
+      </div>
+    </div>
+    <div class="col-md-12">
 
       <div class="form-group">
         <%= f.label :body %> *
