--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -6,6 +6,7 @@
     <div class="col-md-5">
       <h1><%= @portfolio_item.title %></h1>
       <hr>
+      <a href="<%= @portfolio_item.link %>">Lien du site <%= @portfolio_item.title %></a><br/>
       <em><%= @portfolio_item.subtitle %></em>
       <p><%= @portfolio_item.body %></p>
       <hr>
